--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ requires = ["setuptools>=61.0",
   "requests",
   "pandas",
   "numpy",
+  "entsoe-py"
   "codecarbon"
 ]
 
@@ -16,7 +17,7 @@ authors = [
 ]
 description = "Codegreen -- make your computations carbon-aware"
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
