--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires = ["setuptools>=61.0",
   "numpy",
   "entsoe-py",
   "codecarbon",
-  "redis", "csv"
+  "redis"
 ]
 
 build-backend = "setuptools.build_meta"
