--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires = ["setuptools>=61.0",
   "codecarbon",
   "redis",
   "scikit-learn",
-  "tensorflow"
+  "tensorflow",
+  "sphinx"
 ]
 
 build-backend = "setuptools.build_meta"
