--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,19 +22,17 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install sphinx sphinx_rtd_theme  # Install Sphinx and theme if needed
+          pip install sphinx 
 
       - name: Build Sphinx Docs
         run: |
-          cd docs
           make html  # Assuming docs are configured to build HTML files
 
       - name: Deploy docs to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/_build/html  # Location of the built HTML files
+          publish_dir: ./build/html  # Location of the built HTML files
 
   # publish_pypi:
   #   name: Publish to PyPI
