--- a/.github/workflows/publish_doc.yml
+++ b/.github/workflows/publish_doc.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install sphinx=7.4.7  # Install Sphinx and theme if needed
+          pip install sphinx==7.4.7  # Install Sphinx and theme if needed
 
       - name: Build Sphinx Docs
         run: |
