--- a/.github/workflows/publish_doc.yml
+++ b/.github/workflows/publish_doc.yml
@@ -23,9 +23,18 @@ jobs:
         with:
           python-version: '3.12.5'
 
+      # Step to dynamically generate the .config file with the secret
+      - name: Generate .config file
+        run: |
+          echo "[codegreen]" > docs/.codegreencore.config
+          echo "ENTSOE_token=${{ secrets.ENTSOE_TOKEN }}" >> docs/.codegreencore.config # Add your secret here
+          echo "enable_energy_caching=false" >> docs/.codegreencore.config
+          echo "energy_redis_path=redis://localhost:6379" >> .codegreencore.config
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install  .
           pip install sphinx==7.4.7  # Install Sphinx and theme if needed
 
       - name: Build Sphinx Docs
