trying to fix pipe

--- a/.github/workflows/publish_doc.yml
+++ b/.github/workflows/publish_doc.yml
@@ -27,10 +27,11 @@ jobs:
       - name: Generate .config file
         run: |
           echo "[codegreen]" > docs/.codegreencore.config
-          echo "ENTSOE_token=${{ secrets.ENTSOE_TOKEN }}" >> docs/.codegreencore.config # Add your secret here
+          echo "ENTSOE_token=${{ secrets.ENTSOE_TOKEN }}" >> docs/.codegreencore.config
           echo "enable_energy_caching=false" >> docs/.codegreencore.config
-          echo "energy_redis_path=redis://localhost:6379" >> .codegreencore.config
-
+      - name: Verify .config file
+        run: |
+        cat docs/.codegreencore.config
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -39,7 +40,7 @@ jobs:
 
       - name: Build Sphinx Docs
         run: |
-          make html  # Assuming your docs are configured to build HTML
+          make html  
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
