--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Run Tests on main
 
 # Trigger this workflow when pushing to the main branch
 on:
@@ -29,16 +29,17 @@ jobs:
     - name: Install dependencies and move to the test folder
       run: |
         python -m pip install --upgrade pip
+        pip install pytest pandas numpy entsoe-py redis tensorflow scikit-learn sphinx
         pip install .
-        pip install pytest
-        cd tests
+      
 
     # Run pytest to execute tests
     - name: Generate .config file inside the test folder
       run: |
-          echo "[codegreen]" > .codegreencore.config
-          echo "ENTSOE_token=${{ secrets.ENTSOE_TOKEN }}" >> .codegreencore.config
-          echo "enable_energy_caching=false" >> .codegreencore.config    
+          echo "[codegreen]" > tests/.codegreencore.config
+          echo "ENTSOE_token=${{ secrets.ENTSOE_TOKEN }}" >> tests/.codegreencore.config
+          echo "enable_energy_caching=false" >> tests/.codegreencore.config    
     - name: Run tests
       run: |
+        cd ./tests
         pytest
