--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
         python-version: '3.12.5'  # Specify Python version (e.g., '3.9')
 
     # Install dependencies (you can specify requirements.txt or pyproject.toml)
-    - name: Install dependencies and move to the test folder
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pytest pandas numpy entsoe-py redis tensorflow scikit-learn sphinx
