--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ requires = ["setuptools>=61.0",
   "redis",
   "scikit-learn",
   "tensorflow",
-  "sphinx"
+  "sphinx",
+  "matplotlib"
 ]
 
 build-backend = "setuptools.build_meta"
