--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pandas numpy entsoe-py redis tensorflow scikit-learn sphinx
+        pip install pytest pandas numpy entsoe-py redis tensorflow scikit-learn sphinx matplotlib
         pip install .
       
     # Run pytest to execute tests
