--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,34 +1,32 @@
-[build-system]
-requires = ["setuptools>=61.0",
-  "requests",
-  "pandas",
-  "numpy",
-  "entsoe-py",
-  "codecarbon",
-  "redis",
-  "scikit-learn",
-  "tensorflow",
-  "sphinx",
-  "matplotlib"
-]
-
-build-backend = "setuptools.build_meta"
-
-[project]
-name = "codegreen_core"
-version = "0.0.1"
-authors = [
-  { name="Anne Hartebrodt", email="anne.hartebrodt@fau.de" },
-]
-description = "Codegreen -- make your computations carbon-aware"
+[tool.poetry]
+name = "codegreen-core"
+version = "0.5.0"
+description = "This package helps you become aware of the carbon footprint of your computation"
+authors = ["Anne Hartebrodt <anne.hartebrodt@fau.de>","Shubh Vardhan Jain <shubh.v.jain@fau.de>"]
 readme = "README.md"
-requires-python = ">=3.9"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
 
-[project.urls]
-"Homepage" = "https://codegreen.world"
-"Bug Tracker" = "https://github.com/bionetslab/codegreen-core/issues"
+[tool.poetry.dependencies]
+python = ">=3.10, <3.12"
+entsoe-py = "^0.6.13"
+redis = "^5.1.1"
+requests = "^2.32.3"
+pandas = "2.2.3"
+numpy = "<2.0.0"
+tensorflow = "^2.18.0"
+matplotlib = "^3.9.2"
+scikit-learn = "^1.5.2"
+
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.3"
+Sphinx = "^8.1.3"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+# Specify additional package data (similar to include_package_data)
+#[tool.poetry.package.include]
+#"codegreen_core/utilities/country_list.json" = { format = "file" }
+#"codegreen_core/utilities/ci_default_values.csv" = { format = "file" }
+#"codegreen_core/utilities/model_details.json" = { format = "file" }
