--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "codegreen_core"
-version = "0.0.2"
+version = "0.0.3"
 description = "This package helps you become aware of the carbon footprint of your computation"
 authors = ["Anne Hartebrodt <anne.hartebrodt@fau.de>","Shubh Vardhan Jain <shubh.v.jain@fau.de>"]
 readme = "README.md"
@@ -15,12 +15,14 @@ numpy = "<2.0.0"
 tensorflow = "^2.18.0"
 matplotlib = "^3.9.2"
 scikit-learn = "^1.5.2"
+python-crontab = "^3.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
 Sphinx = "^8.1.3"
 black = "^24.10.0"
+jupyter = "^1.1.1"
 
 [build-system]
 requires = ["poetry-core"]
